Query by Skacius

--- a/app/Resources/views/Test/test.html.twig
+++ b/app/Resources/views/Test/test.html.twig
@@ -5,6 +5,6 @@
 
     Product id's:
     {% for product in products %}
-        {{ product.id ~ ", " }}
+        {{ product.skaicius ~ ", " }}
     {% endfor %}
 {% endblock %}
