--- a/app/Resources/views/Test/test.html.twig
+++ b/app/Resources/views/Test/test.html.twig
@@ -7,4 +7,6 @@
     {% for product in products %}
         {{ product.skaicius ~ ", " }}
     {% endfor %}
+
+   <h3>SLugas yra {{ slugas }}</h3>
 {% endblock %}
