--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,74 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+    <meta charset='utf8'/>
+    <title>{% block title %} Pieštukas {% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
+    {% block stylesheets %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+    {% endblock %}
+</head>
+
+{% if (app.user.roles is defined) and (app.user.roles.0 == 'ROLE_ADMIN') %}
+    {% set background = 'admin-background' %}
+{% else %}
+    {% set background = 'user-background' %}
+{% endif %}
+
+<body class="{{ background }}">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">ShopGeo <i class="glyphicon glyphicon-globe"></i></a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="{{ app.request.getSchemeAndHttpHost() }}">Pradžia<span class="sr-only">(current)</span></a>
+                </li>
+                <li><a href="#">Sąlygos</a></li>
+                {% if (app.user.roles is defined) and (app.user.roles.0 == 'ROLE_ADMIN') %}
+                    <li class="nav-admin"><a
+                                href="{{ app.request.getSchemeAndHttpHost() ~ '/orders' }}">Užsakymai</a></li>
+                    <li class="nav-admin"><a href="{{ app.request.getSchemeAndHttpHost() ~ '/users' }}">Pirkėjai</a>
+                    </li>
+                {% endif %}
+            </ul>
+            <div class="pull-right">
+
+                {% if app.user.username is defined %}
+                    <span class="">{{ app.user.username }}</span>
+                    <a href="{{ app.request.getSchemeAndHttpHost() ~ '/logout' }}">
+                        <button type="button" class="btn btn-danger navbar-btn">Atsijungti</button>
+                    </a>
+                {% else %}
+                    <a href="{{ app.request.getSchemeAndHttpHost() ~ '/register' }}">
+                        <button type="button" class="btn btn-default navbar-btn">Registruotis</button>
+                    </a>
+                    <a href="{{ app.request.getSchemeAndHttpHost() ~ '/login' }}">
+                        <button type="button" class="btn btn-success navbar-btn">Prisijungti</button>
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                {% block body %}{% endblock %}
+            </div>
+        </div>
+
+
+    </div><!-- /.container -->
+
+    {% block javascripts %}
+
+    {% endblock %}
+
+</body>
+
+
 </html>
